--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-# Docker Compose 文件版本 (建议添加)
-version: '3.8'
-
 services:
   # Prometheus 服务：负责存储和查询监控指标
   prometheus:
@@ -34,59 +31,39 @@ services:
       retries: 3      # 失败后重试 3 次
       start_period: 10s # 容器启动后等待 10 秒再开始健康检查
 
-  # SNMP Exporter 服务：负责通过 SNMP 协议从目标设备获取指标，并转换为 Prometheus 格式
-  snmp-exporter:
-    # 使用官方 SNMP Exporter 镜像。考虑固定版本，例如: prom/snmp-exporter:v0.25.0
-    image: prom/snmp-exporter:latest
-    container_name: snmp-exporter
-    ports:
-      # 将容器的 9116 端口映射到主机的 9116 端口，Prometheus 将通过此端口抓取指标
-      - "9116:9116"
-    volumes:
-      # 挂载本地 SNMP Exporter 配置文件目录 (包含 snmp.yml) 到容器内
-      - ./conf/snmp-exporter:/etc/snmp_exporter
-    command:
-      # SNMP Exporter 启动命令及参数
-      - '--config.file=/etc/snmp_exporter/snmp.yml' # 指定配置文件路径
-    restart: always
-    networks:
-      - monitoring-network
-    # depends_on 确保模拟器容器先于 exporter 启动 (但实际抓取依赖 Prometheus 配置)
-    depends_on:
-      h3c-snmp-sim:
-        condition: service_healthy # 等待模拟器健康检查通过后再启动
-    healthcheck:
-      # 简单检查 SNMP Exporter 的 HTTP 服务端口是否可访问
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9116"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
-
-  # H3C SNMP Simulator 服务：模拟 H3C 网络设备，响应 SNMP 查询并提供自身指标
-  h3c-snmp-sim:
+  metric_sim_1:
     build:
-      context: ./h3c-snmp-sim # 指定 Docker 构建上下文目录
-      dockerfile: Dockerfile   # 指定用于构建镜像的 Dockerfile 文件名
-    container_name: h3c-snmp-sim
+      context: ./metric-sim
+      dockerfile: Dockerfile
+    container_name: metric_sim_1
     ports:
-      # 映射标准 SNMP UDP 端口 161
-      - "161:161/udp"
-      # 映射模拟器自身的 HTTP 指标端口 (容器内 9116) 到主机的 9117 端口
-      # 避免与 snmp-exporter 的 9116 端口冲突
-      - "9117:9116"
-    environment:
-      # 设置环境变量，告知模拟器应用监听哪个 HTTP 端口
-      - HTTP_PORT=9116
-    restart: always
+      - "8081:8080" # 暴露到主机 8081，方便调试，Prometheus 通过内部网络访问
     networks:
       - monitoring-network
-    healthcheck: # 使用模拟器内置的 /health 端点进行健康检查
-      test: ["CMD", "wget", "-q", "-O-", "http://localhost:9116/health"]
+    restart: always
+    healthcheck:
+      test: ["CMD", "wget", "-q", "-O-", "http://localhost:8080/"] # 检查根路径是否返回200
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 5s # 容器启动后等待 5 秒再开始检查
+      start_period: 5s
+
+  metric_sim_2:
+    build:
+      context: ./metric-sim
+      dockerfile: Dockerfile
+    container_name: metric_sim_2
+    ports:
+      - "8082:8080" # 暴露到主机 8082
+    networks:
+      - monitoring-network
+    restart: always
+    healthcheck:
+      test: ["CMD", "wget", "-q", "-O-", "http://localhost:8080/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
 
   # Grafana 服务：用于数据可视化和仪表盘展示
   grafana:
